# Skythe

./: Cargo.toml  LICENSE  README.md  build.sh  gen_wav  gen_wav.rs  install.sh  libplayer_ui.d  libplayer_ui.rlib  player-ui.d  uninstall.sh
flycheck0/: stdout
player-audio/: Cargo.toml
player-audio/src/: lib.rs
player-cli/: Cargo.toml
player-cli/src/: main.rs
player-core/: Cargo.toml
player-core/src/: lib.rs
player-decode/: Cargo.toml
player-decode/src/: lib.rs
player-metadata/: Cargo.toml
player-metadata/src/: lib.rs
player-mpris/: Cargo.toml
player-mpris/src/: lib.rs
player-ui/: Cargo.toml
player-ui/src/: lib.rs  main.rs
